--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1499,7 +1499,6 @@ footer p span {
   color: var(--clr-dark);
   background: var(--clr-primary);
   cursor: pointer;
-  margin: 260px 0px 10px 5px;
   float: right;
   border: none;
   font-weight: 600;
@@ -1522,7 +1521,6 @@ footer p span {
 #msform .action-button-previous {
   width: 100px;
   cursor: pointer;
-  margin: 260px 0px 10px 5px;
   float: right;
   border: none;
   font-weight: 600;
@@ -1540,6 +1538,10 @@ footer p span {
   transition: all 0.3s ease;
   color: var(--clr-primary);
   background-color: var(--clr-dark);
+}
+
+.content-min-height {
+  min-height: 1500px;
 }
 
 #progressbar {
@@ -1795,10 +1797,6 @@ footer p span {
   float: right;
 }
 
-.custom-pricing-margin-btn {
-  margin-top: 500px !important;
-}
-
 .form-check {
   padding-left: 0 !important;
   text-align: right;
@@ -1880,6 +1878,18 @@ a {
   .tabs {
     min-height: 400px;
   }
+
+  #msform fieldset {
+    min-height: 900px;
+  }
+
+  .margin-order-2 {
+    margin-right: 0;
+  }
+
+  .content-min-height {
+    min-height: 1800px;
+  }
 }
 @media screen and (max-width: 480px) {
   .tabs {
@@ -1900,6 +1910,32 @@ a {
     float: none;
     margin-right: 0;
     margin-bottom: 20px;
+  }
+
+  #msform fieldset {
+    min-height: 1200px;
+  }
+
+  .margin-order-2 {
+    margin-right: 0;
+  }
+
+  .content-min-height {
+    min-height: 2000px;
+  }
+}
+@media screen and (max-width: 768px) {
+  #msform .action-button {
+    transform: translate(10px, 900px);
+  }
+
+  .pushTags-customMargin {
+    margin-right: 20px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .pushOptionAttr-customMargin {
+    margin-right: 25px;
   }
 }
 .project-page-title h3 {
