--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1336,7 +1336,7 @@ footer p span {
 // }
 
 .content-min-height {
-    min-height: 1500px;
+    min-height: 2000px;
 }
 
 #progressbar {
@@ -1691,15 +1691,15 @@ a {
 /* BREAKPOINTS ----- */
 
 @media only screen and (min-width: 568px) and (max-width: 766px) {
-    #msform .action-button.firstBtn {
-        transform: translate(10px, 750px);
-    }
+    // #msform .action-button.firstBtn {
+    //     transform: translate(10px, 750px);
+    // }
 }
 
 @media only screen and (max-width: 576px) {
-    #msform .action-button.firstBtn {
-        transform: translate(10px, 900px);
-    }
+    // #msform .action-button.firstBtn {
+    //     transform: translate(10px, 900px);
+    // }
 }
 @media screen and (max-width: 767px) {
     .tabs {
@@ -1714,7 +1714,7 @@ a {
     }
 
     .content-min-height {
-        min-height: 1800px;
+        min-height: 2300px;
     }
 
     .pushTags-customMargin {
@@ -1724,6 +1724,30 @@ a {
     // #msform .action-button{
     //     transform: translate(0 400px);
     // }
+}
+
+.firstBtn{
+    position: relative;
+    top: 500px;
+}
+
+
+
+.modal-order  {
+    background-color: #95a5a67c;
+    border: 1px solid transparent;
+    border-radius: 0.5rem;
+    // padding: 0.7rem;
+    font-size: 1rem;
+    // font-weight: 600;
+    color: var(--clr-dark);
+    // text-align: center;
+}
+.modal-order:focus-within {
+    border-color: var(--clr-accent);
+    background-color: #fff;
+    outline: none;
+    box-shadow: none;
 }
 
 @media screen and (max-width: 480px) {
@@ -1751,14 +1775,14 @@ a {
     }
 
     .content-min-height {
-        min-height: 2000px;
+        min-height: 2500px;
     }
 }
 
 @media screen and (max-width: 991px) {
-    .pushOptionAttr-customMargin {
-        margin-right: 25px;
-    }
+    // .pushOptionAttr-customMargin {
+    //     margin-right: 25px;
+    // }
 }
 
 
