--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1657,7 +1657,9 @@ a {
     box-shadow: none;
 }
 
-
+.cutom-color:hover{
+    color: white !important;
+}
 // ***********************end pricing page ******************************
 /* BREAKPOINTS ----- */
 // #msform .action-button.firstBtn {
