--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2027,10 +2027,11 @@ a {
   background-color: transparent;
   margin: 0;
   padding: 0;
+  height: 25rem;
 }
 
 .aparat-video iframe {
-  border-radius: 0 1.3rem 1.3rem 0;
+  border-radius: 1.3rem;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -3070,11 +3071,7 @@ a {
 
   .aparat-video {
     margin: 0;
-  }
-
-  .aparat-video iframe,
-.project-sample-img img {
-    border-radius: 1.3rem;
+    height: 20rem;
   }
 
   .project-sample-img img {
