--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1850,9 +1850,10 @@ a {
     background-color: transparent;
     margin: 0;
     padding: 0;
+    height: 25rem;
 }
 .aparat-video iframe {
-    border-radius: 0 1.3rem 1.3rem 0;
+    border-radius: 1.3rem;
     object-fit: contain;
 }
 .project-sample-img {
@@ -2794,10 +2795,7 @@ a {
     }
     .aparat-video {
         margin: 0;
-    }
-    .aparat-video iframe,
-    .project-sample-img img {
-        border-radius: 1.3rem;
+        height: 20rem;
     }
     .project-sample-img img {
         object-fit: cover;
