--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1846,6 +1846,19 @@ a {
     border-bottom: 3px solid transparent;
     border-top: 3px solid #cecac8;
 }
+#video1 img,
+#video2 img,
+#video3 img,
+#video4 img,
+#video5 img,
+#video6 img,
+#video7 img,
+#video8 img,
+#video9 img,
+#video10 img,
+#video11 img {
+  object-fit: contain;
+}
 .aparat-video {
     background-color: transparent;
     margin: 0;
@@ -1861,8 +1874,8 @@ a {
     padding: 0;
 }
 .project-sample-img img {
-    border-radius: 0 1.3rem 1.3rem 0;
-    object-fit: cover;
+    border-radius: 1.3rem;
+    object-fit: contain;
     width: 100%;
     height: 22rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -1951,6 +1964,7 @@ a {
 
 .slides img {
     // width: 540px;
+    cursor: pointer;
     object-fit: cover;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
