fix the rest of the site and finish

--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1433,9 +1433,9 @@ footer p span {
     border-radius: 8px 8px 0 0;
 }
 
-.tabby-tab {
-    flex: 1;
-}
+// .tabby-tab {
+//     flex: 1;
+// }
 
 .tabby-tab label.custom-lable {
     display: block;
