change order page btn like projects page and change btn name

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1622,6 +1622,15 @@ footer p span {
   display: flex;
   min-height: 300px;
   border-radius: 8px 8px 0 0;
+  justify-content: center;
+}
+
+.tabby-tab {
+  max-height: 38px;
+  text-align: justify;
+  /* flex: 1; */
+  justify-content: space-between;
+  /* justify-self: start; */
 }
 
 .tabby-tab label.custom-lable {
@@ -1635,11 +1644,6 @@ footer p span {
   cursor: pointer;
   transition: background 0.5s ease;
   border-radius: 0.5rem;
-}
-
-.tabby-tab label.custom-lable:hover {
-  background: var(--clr-dark);
-  color: var(--clr-primary);
 }
 
 .tabby-content {
@@ -1682,7 +1686,6 @@ footer p span {
   background: var(--clr-secondary);
   color: var(--clr-primary);
   z-index: 2;
-  border: 0.5px solid var(--clr-accent);
 }
 
 [type=radio]:checked ~ label ~ .tabby-content {
@@ -1856,9 +1859,10 @@ a {
   }
 
   .tabby-tab label {
-    height: 45px;
+    max-width: 100px;
     font-size: 13px;
     padding: 8px;
+    text-align: justify;
   }
 
   .tabby-content {
