--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2048,7 +2048,8 @@ a {
 #video8 img,
 #video9 img,
 #video10 img,
-#video11 img {
+#video11 img,
+#video12 img {
   -o-object-fit: contain;
      object-fit: contain;
 }
