--- a/public/css/home.css
+++ b/public/css/home.css
@@ -120,9 +120,9 @@ h6 {
 /* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
-  --clr-secondary: rgb(0, 93, 131);
-  --clr-accent: rgb(233, 195, 30);
-  --clr-dark: rgb(58, 62, 61);
+  --clr-secondary: rgb(0, 113, 162);
+  --clr-accent: rgb(255, 212, 0);
+  --clr-dark: rgb(65, 64, 66);
   --transition-easing: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
@@ -636,20 +636,20 @@ h6 {
 
 .banner-inner {
   background-color: #fff;
-  padding: 0.6rem 1rem;
+  padding: 0.4rem 1rem;
   border-radius: 0 0 1.3rem 1.3rem;
   margin: auto;
-  width: 45%;
+  width: 37%;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.16) 1px 1px 4px inset, rgba(0, 0, 0, 0.23) -1px 0px 4px inset;
 }
 
 .banner-inner h1 {
-  font-size: 2rem;
+  font-size: 1.6rem;
   color: var(--clr-secondary);
   border: 1px solid rgba(0, 0, 0, 0.267);
   border-radius: 0 0 0.8rem 0.8rem;
-  padding: 1rem 0.5rem;
+  padding: 0.7rem 0.5rem;
 }
 
 /* Service Section -------------------------------------------------------- */
@@ -2291,8 +2291,9 @@ a {
 #loginForm,
 #OTPinput {
   padding: 3rem;
+  color: var(--clr-primary);
   border-radius: 0.7rem;
-  background-color: var(--clr-primary);
+  background-color: var(--clr-dark);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
 }
 
@@ -2314,7 +2315,7 @@ a {
 
 #loginForm input,
 #OTPinput input {
-  background-color: #95a5a67c;
+  background-color: var(--clr-primary);
   border: 1px solid transparent;
   border-radius: 0.5rem;
   padding: 0.7rem;
@@ -2332,6 +2333,10 @@ a {
   box-shadow: none;
 }
 
+.loading-btn {
+  background-color: var(--clr-accent);
+}
+
 .secondary-btn.spinning:after {
   content: "";
   position: absolute;
@@ -2339,7 +2344,7 @@ a {
   top: 50%;
   width: 0;
   height: 0;
-  box-shadow: 0px 0px 0 1px var(--clr-accent);
+  box-shadow: 0px 0px 0 1px var(--clr-primary);
   border-radius: 50%;
   -webkit-animation: rotate360 0.5s infinite linear, exist 0.1s forwards ease;
           animation: rotate360 0.5s infinite linear, exist 0.1s forwards ease;
@@ -2353,10 +2358,14 @@ a {
   right: 30%;
   top: 50%;
   position: absolute;
-  border: 2px solid var(--clr-accent);
+  border: 2px solid var(--clr-primary);
   border-right: 3px solid var(--clr-secondary);
   -webkit-animation: rotate360 0.5s infinite linear, exist 0.1s forwards ease;
           animation: rotate360 0.5s infinite linear, exist 0.1s forwards ease;
+}
+
+.otp-btn {
+  background-color: var(--clr-accent);
 }
 
 @-webkit-keyframes rotate360 {
